--- a/CssToolTip/index.html
+++ b/CssToolTip/index.html
@@ -8,11 +8,24 @@
     <title>Css - Tooltip</title>
 </head>
 <body>
+    <h1>Css Tooltip</h1>
     <div id="container">
-        <button class="btn">Left</button>
-        <button class="btn">Top</button>
-        <button class="btn">Bottom</button>
-        <button class="btn">Right</button>
+        <div class="tooltipContainer">
+            <button class="btn">Left</button>
+            <p class="text t1">Left</p>
+        </div>
+        <div class="tooltipContainer">
+            <button class="btn ">Top</button>
+            <p class="text t2">Top</p>
+        </div>
+        <div class="tooltipContainer">
+            <button class="btn">Bottom</button>
+            <p class="text t3">Bottom</p>
+        </div>
+        <div class="tooltipContainer">
+            <button class="btn">Right</button>
+            <p class="text t4">Right</p>
+        </div>
     </div>
 </body>
 </html>
