--- a/NavigationalBar/index.html
+++ b/NavigationalBar/index.html
@@ -48,6 +48,7 @@
     window.addEventListener("resize", function (event) {
            width=window.innerWidth
             if (Number(width) > 768) menu.style.display = "block"
+            else menu.style.display="none"
         })
        
     toggler.addEventListener("click",()=>{
